update on links

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo">
-                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            <a href="" class="header__logo">
+                <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
                 <span></span>
@@ -27,11 +27,11 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a class="active" href="/about.html">About Us</a>
-                <a href="/business.html">For Business</a>
-                <a href="/Refferers.html">For Refferers</a>
-                <a href="/faq.html">FAQ</a>
-                <a href="/contact.html">Contact</a>
+                <a class="active" href="about.html">About Us</a>
+                <a href="business.html">For Business</a>
+                <a href="Refferers.html">For Refferers</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -46,10 +46,10 @@
                 <p>Social collaboration has never been more profitable; you can now boost your earnings daily by helping a business grow.</p>
                 <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
-            <img src="/assets/Images/about_hero_image_desktop.png" class="hero__image" alt="Hero Image">
+            <img src="assets/Images/about_hero_image_desktop.png" class="hero__image" alt="Hero Image">
             <!-- <div class="hero__image"></div> -->
         </div>
-        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
     </section>
 
     <section class="about section">
@@ -66,8 +66,8 @@
                 <p>On the other hand, freelance marketers get rewarded instantly when they connect customers to businesses on Miref.</p>
             </div>
             <div class="about_content_image">
-                <img src="/assets/Images/about_us_image_desktop.png" class="hide-for-mobile" alt="About Section Image">
-                <img src="/assets/Images/about_us_image.png" class="hide-for-desktop" alt="About Section Image">
+                <img src="assets/Images/about_us_image_desktop.png" class="hide-for-mobile" alt="About Section Image">
+                <img src="assets/Images/about_us_image.png" class="hide-for-desktop" alt="About Section Image">
             </div>
         </div>
     </section>
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="flex footer__top flex-fd-c">
                 <div class="footer__brand flex flex-fd-c">
-                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <img src="assets/Images/Logo.svg" alt="Logo">
                     <p>We win together.</p>
                     <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
                 </div>
@@ -142,14 +142,14 @@
             <div class="footer__bottom flex flex-fd-c">
                 <p>© 2023 Miref. All rights reserved.</p>
                 <div class="flex">
-                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Facebook icon.svg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 
-<script src="/app/js/script.js"></script>
+<script src="app/js/script.js"></script>
 </body>
 </html>
