--- a/business.html
+++ b/business.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo">
-                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            <a href="" class="header__logo">
+                <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
                 <span></span>
@@ -27,11 +27,11 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html">About Us</a>
-                <a class="active" href="/business.html">For Business</a>
-                <a href="/Refferers.html">For Refferers</a>
-                <a href="/faq.html">FAQ</a>
-                <a href="/contact.html">Contact</a>
+                <a href="about.html">About Us</a>
+                <a class="active" href="business.html">For Business</a>
+                <a href="Refferers.html">For Refferers</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -46,11 +46,11 @@
                 <p id="sub_text_width_business">Connect with real people to source customers for you in and outside your social circle.</p>
                 <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
-            <img src="/assets/Images/business_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
-            <img src="/assets/Images/business_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
+            <img src="assets/Images/business_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
+            <img src="assets/Images/business_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
         </div>
-        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
-        <img src="/assets/Images/hero_vector.svg" alt="" class="hero__vector hide-for-mobile">
+        <img src="assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="assets/Images/hero_vector.svg" alt="" class="hero__vector hide-for-mobile">
     </section>
 
      <!-- Social Proof Section -->
@@ -58,11 +58,11 @@
         <div class="social_proof__content container">
             <p>Our Partners</p>
             <div class="social_proof__logos flex">
-                <img src="/assets/Images/Monnify logo.svg" alt="">
-                <img src="/assets/Images/Quickteller logo.svg" alt="">
-                <img src="/assets/Images/Master Card logo.svg" alt="">
-                <img src="/assets/Images/Verve logo.svg" alt="">
-                <img src="/assets/Images/Visa logo.svg" alt="">
+                <img src="assets/Images/Monnify logo.svg" alt="">
+                <img src="assets/Images/Quickteller logo.svg" alt="">
+                <img src="assets/Images/Master Card logo.svg" alt="">
+                <img src="assets/Images/Verve logo.svg" alt="">
+                <img src="assets/Images/Visa logo.svg" alt="">
             </div>
         </div>
     </section>
@@ -72,13 +72,13 @@
         <div class="business__container container flex flex-fd-c">
             <div class="business__content">
                 <div class="business__text_item">
-                    <img src="/assets/Images//Featured icon black.svg" alt="">
+                    <img src="assets/Images//Featured icon black.svg" alt="">
                     <h5>Miref Business Account</h5>
                     <p>Miref business account is a robust solution we’ve created for you to harvest customers to your business with much ease.</p>
                     <p>As a startup or existing small business, you will enjoy a huge growth opportunity with Miref as it helps link businesses with thousands of people who are ready to socially market and follow up customers until they successfully patronize your business.</p>
                 </div>
                 <div class="business__text_item">
-                    <img src="/assets/Images//Featured icon black.svg" alt="">
+                    <img src="assets/Images//Featured icon black.svg" alt="">
                     <h5>Why Miref Business Account?</h5>
                     <ul>
                         <li>Get the result that matters to your business. Enjoy multiple referrals to your business without any stress.</li>
@@ -88,8 +88,8 @@
                 </div>
             </div>
             <div class="business__image_container">
-                <img src="/assets/Images/business_image_desktop.svg" class="hide-for-mobile" alt="Business Image Desktop">
-                <img src="/assets/Images/business_image.svg" class="hide-for-desktop" alt="Business Image Mobile">
+                <img src="assets/Images/business_image_desktop.svg" class="hide-for-mobile" alt="Business Image Desktop">
+                <img src="assets/Images/business_image.svg" class="hide-for-desktop" alt="Business Image Mobile">
             </div>
         </div>
     </div>
@@ -97,24 +97,24 @@
     <div class="business_how_it_works section">
         <div class="business_how_it_works__container container flex flex-fd-c">
             <div class="business_how_it_works__image_container">
-                <img src="/assets/Images/how_it_works_image_desktop.svg" alt="How it works Image" class="hide-for-mobile">
-                <img src="/assets/Images/how_it_works_image_mobile.svg" alt="How it works Image" class="hide-for-desktop">
+                <img src="assets/Images/how_it_works_image_desktop.svg" alt="How it works Image" class="hide-for-mobile">
+                <img src="assets/Images/how_it_works_image_mobile.svg" alt="How it works Image" class="hide-for-desktop">
             </div>
             <div class="business_how_it_works__list flex flex-fd-c">
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_1.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_1.svg" alt="List Icon">
                     <p>Create an account for your business on miref.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_2.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_2.svg" alt="List Icon">
                     <p>Set your preferred referral fee and fund your wallet to attract social referrals.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_3.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_3.svg" alt="List Icon">
                     <p>Use the referral code submitted by customers to confirm referral after a successful transaction/ sale.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_4.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_4.svg" alt="List Icon">
                     <p>Referrer gets credited directly from your wallet upon your confirmation.</p>
                 </div>
             </div>
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="flex footer__top flex-fd-c">
                 <div class="footer__brand flex flex-fd-c">
-                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <img src="assets/Images/Logo.svg" alt="Logo">
                     <p>We win together.</p>
                     <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
                 </div>
@@ -190,14 +190,14 @@
             <div class="footer__bottom flex flex-fd-c">
                 <p>© 2023 Miref. All rights reserved.</p>
                 <div class="flex">
-                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Facebook icon.svg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 
-<script src="/app/js/script.js"></script>
+<script src="app/js/script.js"></script>
 </body>
 </html>
