--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo">
-                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            <a href="" class="header__logo">
+                <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
                 <span></span>
@@ -27,11 +27,11 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html">About Us</a>
-                <a href="/business.html">For Business</a>
-                <a href="/Refferers.html">For Refferers</a>
-                <a class="active" href="/faq.html">FAQ</a>
-                <a href="/contact.html">Contact</a>
+                <a href="about.html">About Us</a>
+                <a href="business.html">For Business</a>
+                <a href="Refferers.html">For Refferers</a>
+                <a class="active" href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -46,12 +46,12 @@
                 <p id="faq_sub_text">Have any questions? We are here to help you.</p>
                 <div class="search_input" id="faq_search_input">
                     <input type="text" placeholder="Search" class="input">
-                    <img src="/assets/Images/search_icon.svg" alt="Search Icon">
+                    <img src="assets/Images/search_icon.svg" alt="Search Icon">
                 </div>
                 
             </div>
         </div>
-        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
     </section>
 
 
@@ -60,16 +60,16 @@
             <div class="faq__item">
                 <div class="faq__header flex">
                     <h6>How can I earn with Miref</h6>
-                    <img src="/assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
-                    <img src="/assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
+                    <img src="assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
+                    <img src="assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
                 </div>
                 <p class="faq__text">Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
             </div>
             <div class="faq__item">
                 <div class="faq__header flex">
                     <h6>Who can benefit from using Miref ?</h6>
-                    <img src="/assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
-                    <img src="/assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
+                    <img src="assets/Images/featured_icon_close.svg" class="faq__close" alt="Feature Icon">
+                    <img src="assets/Images/featured_icon_open.svg" class="faq__open" alt="Feature Icon">
                 </div>
                 <p class="faq__text" >Simply Create an account on Miref, your account comes with a personalized wallet and a unique referral code. Just copy your referral code and share with friends, convince them to patronize any of the thousands of businesses profiled on Miref, make sure your referred customers submit your Miref code every time they transact business on your referral. Your account gets credited automatically as soon as any transaction is confirmed with your Miref code by the business owner.</p>
             </div>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="flex footer__top flex-fd-c">
                 <div class="footer__brand flex flex-fd-c">
-                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <img src="assets/Images/Logo.svg" alt="Logo">
                     <p>We win together.</p>
                     <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
                 </div>
@@ -148,14 +148,14 @@
             <div class="footer__bottom flex flex-fd-c">
                 <p>© 2023 Miref. All rights reserved.</p>
                 <div class="flex">
-                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Facebook icon.svg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 
-<script src="/app/js/script.js"></script>
+<script src="app/js/script.js"></script>
 </body>
 </html>
