--- a/Refferers.html
+++ b/Refferers.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo">
-                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            <a href="" class="header__logo">
+                <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
                 <span></span>
@@ -27,11 +27,11 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html">About Us</a>
-                <a href="/business.html">For Business</a>
-                <a class="active"  href="/Refferers.html">For Refferers</a>
-                <a href="/faq.html">FAQ</a>
-                <a href="/contact.html">Contact</a>
+                <a href="about.html">About Us</a>
+                <a href="business.html">For Business</a>
+                <a class="active"  href="Refferers.html">For Refferers</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -46,11 +46,11 @@
                 <p id="sub_text_width_refferers">Connect with real people to source customers for you in and outside your social circle.</p>
                 <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
-            <img src="/assets/Images/refferers_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
-            <img src="/assets/Images/refferers_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
+            <img src="assets/Images/refferers_hero_image_desktop.svg" class="hero__image hide-for-mobile" id="business_hero_image_desktop" alt="Hero Image">
+            <img src="assets/Images/refferers_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
         </div>
-        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
-        <img src="/assets/Images/hero_vector_red.svg" alt="" id="refferers_hero_vector_image" class="hero__vector hide-for-mobile">
+        <img src="assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="assets/Images/hero_vector_red.svg" alt="" id="refferers_hero_vector_image" class="hero__vector hide-for-mobile">
     </section>
 
      <!-- Social Proof Section -->
@@ -58,11 +58,11 @@
         <div class="social_proof__content container">
             <p>Our Partners</p>
             <div class="social_proof__logos flex">
-                <img src="/assets/Images/Monnify logo.svg" alt="">
-                <img src="/assets/Images/Quickteller logo.svg" alt="">
-                <img src="/assets/Images/Master Card logo.svg" alt="">
-                <img src="/assets/Images/Verve logo.svg" alt="">
-                <img src="/assets/Images/Visa logo.svg" alt="">
+                <img src="assets/Images/Monnify logo.svg" alt="">
+                <img src="assets/Images/Quickteller logo.svg" alt="">
+                <img src="assets/Images/Master Card logo.svg" alt="">
+                <img src="assets/Images/Verve logo.svg" alt="">
+                <img src="assets/Images/Visa logo.svg" alt="">
             </div>
         </div>
     </section>
@@ -72,13 +72,13 @@
         <div class="business__container container flex flex-fd-c">
             <div class="business__content">
                 <div class="business__text_item">
-                    <img src="/assets/Images/featured_icon_red.svg" alt="">
+                    <img src="assets/Images/featured_icon_red.svg" alt="">
                     <h5>Miref Personal Account</h5>
                     <p>Every day we casually refer our friends, Families and acquaintances to our tailor, hair stylist, photographer, event planner, architect, car dealer etc. Miref brings you the best opportunity to earn instant money while referring someone to a business on Miref.</p>
                     <p>You do not have to be a professional marketer or influencer. All you need is a circle of friends, family or any kind of social audience that you will refer to patronize any business on Miref.</p>
                 </div>
                 <div class="business__text_item">
-                    <img src="/assets/Images/featured_icon_red.svg" alt="">
+                    <img src="assets/Images/featured_icon_red.svg" alt="">
                     <h5>Miref Business Account</h5>
                     <ul>
                         <li>With Miref personal account, you can enjoy instant earnings when you refer customer to any business on miref.</li>
@@ -87,8 +87,8 @@
                 </div>
             </div>
             <div class="business__image_container">
-                <img src="/assets/Images/refferers_image_desktop.svg" class="hide-for-mobile" alt="Business Image Desktop">
-                <img src="/assets/Images/refferers_image_mobile.svg" class="hide-for-desktop" alt="Business Image Mobile">
+                <img src="assets/Images/refferers_image_desktop.svg" class="hide-for-mobile" alt="Business Image Desktop">
+                <img src="assets/Images/refferers_image_mobile.svg" class="hide-for-desktop" alt="Business Image Mobile">
             </div>
         </div>
     </div>
@@ -96,24 +96,24 @@
     <div class="business_how_it_works section">
         <div class="business_how_it_works__container container flex flex-fd-c">
             <div class="business_how_it_works__image_container">
-                <img src="/assets/Images/how_it_works_image_desktop_red.svg" alt="How it works Image" class="hide-for-mobile">
-                <img src="/assets/Images/how_it_works_image_mobile_red.svg" alt="How it works Image" class="hide-for-desktop">
+                <img src="assets/Images/how_it_works_image_desktop_red.svg" alt="How it works Image" class="hide-for-mobile">
+                <img src="assets/Images/how_it_works_image_mobile_red.svg" alt="How it works Image" class="hide-for-desktop">
             </div>
             <div class="business_how_it_works__list flex flex-fd-c">
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_red_1.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_red_1.svg" alt="List Icon">
                     <p>Create an account for your business on miref.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_red_2.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_red_2.svg" alt="List Icon">
                     <p>Set your preferred referral fee and fund your wallet to attract social referrals.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_red_3.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_red_3.svg" alt="List Icon">
                     <p>Use the referral code submitted by customers to confirm referral after a successful transaction/ sale.</p>
                 </div>
                 <div class="business_how_it_works__list_item flex">
-                    <img src="/assets/Images/list_icon_red_4.svg" alt="List Icon">
+                    <img src="assets/Images/list_icon_red_4.svg" alt="List Icon">
                     <p>Referrer gets credited directly from your wallet upon your confirmation.</p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
         <div class="container">
             <div class="flex footer__top flex-fd-c">
                 <div class="footer__brand flex flex-fd-c">
-                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <img src="assets/Images/Logo.svg" alt="Logo">
                     <p>We win together.</p>
                     <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
                 </div>
@@ -189,14 +189,14 @@
             <div class="footer__bottom flex flex-fd-c">
                 <p>© 2023 Miref. All rights reserved.</p>
                 <div class="flex">
-                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Facebook icon.svg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 
-<script src="/app/js/script.js"></script>
+<script src="app/js/script.js"></script>
 </body>
 </html>
