--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miref - Open up your business to thousands of freelance marketers</title>
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,8 +16,8 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="/" class="header__logo">
-                <img src="/assets/Images/Logo.svg" alt="Miref Logo">
+            <a href="" class="header__logo">
+                <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
                 <span></span>
@@ -27,11 +27,11 @@
 
             <div class="header__links hide-for-mobile">
                 <!-- <a href="#">Home</a> -->
-                <a href="/about.html">About Us</a>
-                <a href="/business.html">For Business</a>
-                <a href="/Refferers.html">For Refferers</a>
-                <a href="/faq.html">FAQ</a>
-                <a href="/contact.html">Contact</a>
+                <a href="about.html">About Us</a>
+                <a href="business.html">For Business</a>
+                <a href="Refferers.html">For Refferers</a>
+                <a href="faq.html">FAQ</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
@@ -47,10 +47,10 @@
                 <a href="#newsletter_section" class="btn-primary">Stay Informed</a>
             </div>
             <!-- <div class="hero__image"></div> -->
-            <img src="/assets/Images/home_hero_image.svg" class="hero__image hide-for-mobile" alt="Hero Image">
-            <img src="/assets/Images/home_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
+            <img src="assets/Images/home_hero_image.svg" class="hero__image hide-for-mobile" alt="Hero Image">
+            <img src="assets/Images/home_hero_image_mobile.svg" class="hero__image hide-for-desktop" alt="Hero Image">
         </div>
-        <img src="/assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
+        <img src="assets/Images/hero layer blur.png" alt="" class="hero__blur hide-for-mobile">
     </section>
 
     <!-- Social Proof Section -->
@@ -58,11 +58,11 @@
         <div class="social_proof__content container">
             <p>Our Partners</p>
             <div class="social_proof__logos flex">
-                <img src="/assets/Images/Monnify logo.svg" alt="">
-                <img src="/assets/Images/Quickteller logo.svg" alt="">
-                <img src="/assets/Images/Master Card logo.svg" alt="">
-                <img src="/assets/Images/Verve logo.svg" alt="">
-                <img src="/assets/Images/Visa logo.svg" alt="">
+                <img src="assets/Images/Monnify logo.svg" alt="">
+                <img src="assets/Images/Quickteller logo.svg" alt="">
+                <img src="assets/Images/Master Card logo.svg" alt="">
+                <img src="assets/Images/Verve logo.svg" alt="">
+                <img src="assets/Images/Visa logo.svg" alt="">
             </div>
         </div>
     </section>
@@ -76,54 +76,54 @@
         </div>
         <div class="features__item flex container">
             <div class="features__item_text">
-                <img src="/assets/Images/Featured icon.svg" alt="">
+                <img src="assets/Images/Featured icon.svg" alt="">
                 <h5>Miref Business Account</h5>
                 <p>Get the result that matters to your business. Enjoy multiple referrals to your business from within and outside your social circle.</p>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>Reduce expenses on social media ads that may not result in actual sales</p>
                 </div>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>Be in full Control of what you spend on marketing, choose how much you pay your referrers and pay only for completed referrals. </p>
                 </div>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>Connect your business with real people to source customers for you in and outside your social circle.</p>
                 </div>
             </div>
             <div class="features__image">
-                <img class="hide-for-desktop" src="/assets/Images//feature_image_mobile_1.svg" alt="">
-                <img class="hide-for-mobile" src="/assets/Images/feature_image_web_1.svg" alt="">
+                <img class="hide-for-desktop" src="assets/Images//feature_image_mobile_1.svg" alt="">
+                <img class="hide-for-mobile" src="assets/Images/feature_image_web_1.svg" alt="">
             </div>
         </div>
         <div class="features__item flex container">
             <div class="features__item_text" id="feature_text_2">
-                <img src="/assets/Images//Featured icon black.svg" alt="">
+                <img src="assets/Images//Featured icon black.svg" alt="">
                 <h5>Miref Personal Account</h5>
                 <p>Everyday, we casually refer our friends, families and acquaintances to patronize businesses that we trust, Miref is here to help you earn from those referrals.</p>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>Enjoy instant earnings when you refer customer to any business on miref.</p>
                 </div>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>Get a unique username that pays you across all businesses on Miref.</p>
                 </div>
                 <br/>
                 <div class="features__list flex">
-                    <img src="/assets/Images/Check icon.svg" alt="">
+                    <img src="assets/Images/Check icon.svg" alt="">
                     <p>We monetize your social referrals; you chose your own bargain.</p>
                 </div>
             </div>
             <div class="features__image">
-                <img class="hide-for-desktop" src="/assets/Images/feature_image_mobile_2.svg" alt="">
-                <img id="feature_image_2" class="hide-for-mobile" src="/assets/Images/feature_image_web_2.svg" alt="">
+                <img class="hide-for-desktop" src="assets/Images/feature_image_mobile_2.svg" alt="">
+                <img id="feature_image_2" class="hide-for-mobile" src="assets/Images/feature_image_web_2.svg" alt="">
             </div>
         </div>
     </section>
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="flex footer__top flex-fd-c">
                 <div class="footer__brand flex flex-fd-c">
-                    <img src="/assets/Images/Logo.svg" alt="Logo">
+                    <img src="assets/Images/Logo.svg" alt="Logo">
                     <p>We win together.</p>
                     <p>Address : Plot 1141, Cadastral Zone B07, Katampe, Abuja</p>
                 </div>
@@ -195,14 +195,14 @@
             <div class="footer__bottom flex flex-fd-c">
                 <p>© 2023 Miref. All rights reserved.</p>
                 <div class="flex">
-                    <a href="#"><img src="/assets/Images/Twitter icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/LinkedIn  icon.svg" alt=""></a>
-                    <a href="#"><img src="/assets/Images/Facebook icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Twitter icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/LinkedIn  icon.svg" alt=""></a>
+                    <a href="#"><img src="assets/Images/Facebook icon.svg" alt=""></a>
                 </div>
             </div>
         </div>
     </footer>
 
-<script src="/app/js/script.js"></script>
+<script src="app/js/script.js"></script>
 </body>
 </html>
