--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
-            <a href="" class="header__logo">
+            <a href="/" class="header__logo">
                 <img src="assets/Images/Logo.svg" alt="Miref Logo">
             </a>
             <a href="#" id="btn_menu" class="header__menu hide-for-desktop">
