update on mobile navigation

--- a/faq.html
+++ b/faq.html
@@ -25,13 +25,15 @@
                 <span></span>
             </a>
 
-            <div class="header__links hide-for-mobile">
-                <!-- <a href="#">Home</a> -->
-                <a href="about.html">About Us</a>
-                <a href="business.html">For Business</a>
-                <a href="Refferers.html">For Refferers</a>
-                <a class="active" href="faq.html">FAQ</a>
-                <a href="contact.html">Contact</a>
+            <div class="background hide-for-mobile">
+                <div class="header__links">
+                    <!-- <a href="#">Home</a> -->
+                    <a href="about.html">About Us</a>
+                    <a href="business.html">For Business</a>
+                    <a href="Refferers.html">For Refferers</a>
+                    <a class="active" href="faq.html">FAQ</a>
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
