--- a/about.html
+++ b/about.html
@@ -24,14 +24,16 @@
                 <span></span>
                 <span></span>
             </a>
-
-            <div class="header__links hide-for-mobile">
-                <!-- <a href="#">Home</a> -->
-                <a class="active" href="about.html">About Us</a>
-                <a href="business.html">For Business</a>
-                <a href="Refferers.html">For Refferers</a>
-                <a href="faq.html">FAQ</a>
-                <a href="contact.html">Contact</a>
+            
+            <div class="background hide-for-mobile">
+                <div class="header__links">
+                    <!-- <a href="#">Home</a> -->
+                    <a class="active" href="about.html">About Us</a>
+                    <a href="business.html">For Business</a>
+                    <a href="Refferers.html">For Refferers</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="contact.html">Contact</a>
+                </div>
             </div>
 
             <a href="#newsletter_section" class="btn-primary hide-for-mobile">Stay Informed</a>
