--- a/index.html
+++ b/index.html
@@ -10,9 +10,46 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <style>
+        .toast {
+            position: fixed;
+            top: 0;
+            right: 0;
+
+            transform: translateY(100%);
+            opacity: 0;
+
+            transition:
+                opacity 500ms,
+                transform 500ms;
+        }
+
+        .toast.visible {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .toast-body {
+            margin: 28px;
+            padding: 20px 24px;
+
+            font-size: larger;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+            background-color: lightskyblue;
+            color: darkblue;
+
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
 
+    <div class="toast" id="toast">
+        <div class="toast-body">
+        </div>
+    </div>
     <!-- Header Section -->
     <header class="header">
         <nav class="flex flex-jc-sb flex-ai-c">
@@ -137,9 +174,9 @@
                 <div>
                     <h5>Subscribe to stay informed</h5>
                     <p>Be the first to know when it’s launched</p>
-                    <form action="#" class="flex">
-                        <input type="text" placeholder="Name" class="input">
-                        <input type="text" placeholder="Email" class="input">
+                    <form action="" method="post" class="flex">
+                        <input type="text" name="name" placeholder="Name" class="input">
+                        <input type="email" name="email" placeholder="Email" class="input">
                         <input type="submit" value="submit" class="btn-secondary newsletter__submit">
                     </form>
                     <p class="newsletter__help_text">We care about your data in our privacy policy</p>
@@ -206,5 +243,36 @@
     </footer>
 
 <script src="app/js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+    $("form").on("submit", function(event){
+        event.preventDefault();
+ 
+        var formValues= $(this).serialize();
+ 
+        $.post("newsletter.php", formValues, function(data){
+            // Display the returned data in browser
+            console.log(data);
+            const toast = document.getElementById('toast');
+
+            toast.querySelector('.toast-body').innerHTML = "Thank you for your interest. We will get back shortly";
+            toast.classList.add('visible');
+            //$("#toast").html(data);
+        });
+    });
+});
+</script>
+<script>
+    // const toast = document.getElementById('toast');
+
+    // document.getElementById('showBtn').addEventListener('click', function() {
+    //     toast.querySelector('.toast-body').innerHTML = "Success";
+    //     toast.classList.add('visible');
+    // });
+    document.getElementById('hideBtn').addEventListener('click', function() {
+        toast.classList.remove('visible');
+    });
+</script>
 </body>
 </html>
