--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/toast.css">
 </head>
 <body>
 
@@ -84,9 +85,9 @@
                 <div>
                     <h5>Subscribe to stay informed</h5>
                     <p>Be the first to know when it’s launched</p>
-                    <form action="#" class="flex">
-                        <input type="text" placeholder="Name" class="input">
-                        <input type="text" placeholder="Email" class="input">
+                    <form action="#" method="post" class="flex">
+                        <input type="text" required name="name" placeholder="Name" class="input">
+                        <input type="email" required name="email" placeholder="Email" class="input">
                         <input type="submit" value="submit" class="btn-secondary newsletter__submit">
                     </form>
                     <p class="newsletter__help_text">We care about your data in our privacy policy</p>
@@ -153,5 +154,25 @@
     </footer>
 
 <script src="app/js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+    $("form").on("submit", function(event){
+        event.preventDefault();
+ 
+        var formValues= $(this).serialize();
+ 
+        $.post("newsletter.php", formValues, function(data){
+            // Display the returned data in browser
+            console.log(data);
+            const toast = document.getElementById('toast');
+
+            toast.querySelector('.toast-body').innerHTML = "Thank you for your interest. We will get back shortly";
+            toast.classList.add('visible');
+            // $("#toast").html(data);
+        });
+    });
+});
+</script>
 </body>
 </html>
