--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/toast.css">
 </head>
 <body>
 
@@ -83,29 +84,29 @@
             <div class="form__form">
                 <h5>Get in touch</h5>
                 <p>Our friendly team would love to hear from you.</p>
-                <form action="#">
+                <form action="#" id="contact" method="post">
                     <div class="form__input_group flex flex-fd-c">
                         <div class="form__input flex flex-fd-c">
                             <label for="name">Name</label>
-                            <input type="text" placeholder="First Name" class="input">
+                            <input type="text" required name="fname" placeholder="First Name" class="input">
                         </div>
                         <div class="form__input flex flex-fd-c">
                             <label for="last_name">Last Name</label>
-                            <input type="text" placeholder="Last Name" class="input">
+                            <input type="text" required name="lname" placeholder="Last Name" class="input">
                         </div>
                     </div>
                     <div class="form__input flex flex-fd-c">
                         <label for="Email">Email</label>
-                        <input type="Email" placeholder="yourmail@company.com" class="input">
+                        <input type="Email" required name="email" placeholder="yourmail@company.com" class="input">
                     </div>
                     <div class="form__input flex flex-fd-c">
                         <label for="phone_number">Phone Number</label>
-                        <input type="text" placeholder="+234 (080) 000-0000" class="input">
+                        <input type="text" name="phone" placeholder="+234 (080) 000-0000" class="input">
                     </div>
                     <div class="form__input flex flex-fd-c">
                         <label for="message">Message</label>
                         <!-- <input type="textarea" placeholder="+234 (080) 000-0000" class="input"> -->
-                        <textarea name="message" cols="30" rows="10"></textarea>
+                        <textarea name="message" required cols="30" rows="10"></textarea>
                     </div>
                     <input type="submit" value="Send Message" id="submit_button" class="btn-primary">
                 </form>
@@ -122,9 +123,9 @@
                 <div>
                     <h5>Subscribe to stay informed</h5>
                     <p>Be the first to know when it’s launched</p>
-                    <form action="#" class="flex">
-                        <input type="text" placeholder="Name" class="input">
-                        <input type="text" placeholder="Email" class="input">
+                    <form id="subscribe" action="#" method="post" class="flex">
+                        <input type="text" required name="name" placeholder="Name" class="input">
+                        <input type="email" required name="email" placeholder="Email" class="input">
                         <input type="submit" value="submit" class="btn-secondary newsletter__submit">
                     </form>
                     <p class="newsletter__help_text">We care about your data in our privacy policy</p>
@@ -191,5 +192,42 @@
     </footer>
 
 <script src="app/js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).ready(function(){
+    $("#subscribe").on("submit", function(event){
+        event.preventDefault();
+ 
+        var formValues= $(this).serialize();
+ 
+        $.post("newsletter.php", formValues, function(data){
+            // Display the returned data in browser
+            console.log(data);
+            const toast = document.getElementById('toast');
+
+            toast.querySelector('.toast-body').innerHTML = "Thank you for your interest. We will get back shortly";
+            toast.classList.add('visible');
+            // $("#toast").html(data);
+        });
+    });
+
+    $("#contact").on("submit", function(event){
+        event.preventDefault();
+ 
+        var formValues= $(this).serialize();
+ 
+        $.post("contact.php", formValues, function(data){
+            // Display the returned data in browser
+            console.log(data);
+            const toast = document.getElementById('toast');
+
+            toast.querySelector('.toast-body').innerHTML = "Thank you for your enquiry. An agent will contact you shortly";
+            toast.classList.add('visible');
+            // $("#toast").html(data);
+        });
+    });
+
+});
+</script>
 </body>
 </html>
